--- a/Style.css
+++ b/Style.css
@@ -9,18 +9,44 @@ body{
   padding: 1%;
 }
 
+.header{
+  position: relative;
+}
+
+.header-image{
+  width: 100%;
+  height: 500px;
+  background-image: url('irishday.jpg');
+  background-position: 0%;
+  background-size: cover;
+}
+
+.header-content{
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-30%);
+  background-color: #f6f6ed;
+  padding: 10px;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 h1{
   font-family: cardo, serif;
   font-weight: 700;
   font-size: 48px;
-  text-align: center;
   margin-bottom: 20px;
+  text-align: right;
 }
 
 h2{
   font-family: cardo, serif;
   font-weight: 400;
   font-size: 36px;
+  text-align: right;
+  margin-top: 100px;
 }
 
 h3{
@@ -30,6 +56,7 @@ h3{
   padding: 2%;
   background-color: #1f5014;
   color: #f6f6ed;
+  margin-bottom: 4px;
 }
 
 p{
@@ -38,6 +65,7 @@ p{
   font-size: 21px;
 }
 
+/* this a stuff changed the link colors and underlines the text when you hover over it */
 a {
   color: #1f5014;
   text-decoration: none;
@@ -47,40 +75,126 @@ a:hover {
   text-decoration: underline;
 }
 
+.Pat-flags{
+  float: right;
+  margin-left: 10px;
+  margin-right: 15px;
+  width: 48%;
+  height: 20%;
+}
+
+.lighthouses{
+  float: right;
+  margin-left: 10px;
+  margin-right: 20px;
+  width: 36%;
+  height: 20%; 
+}
+
+.michelle{
+  float: right;
+  margin-left: 10px;
+  margin-right: 15px;
+  width: 45%;
+  height: 20%;
+}
+
+.irelandpaintings{
+  float: left;
+  margin-right: 10px;
+  margin-left: 15px;
+  width: 28%;
+  height: 8%;
+}
 /* New styles for image containers */
 .image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
+  max-width: fit-content;
+  position: relative;
+  margin: auto;
+  margin-left: 32.5%;
 }
 
-.image-container img {
-  max-width: 50%; /* Set the maximum width of the image to 100% */
-  max-height: 20; /* Set the maximum height of the image to 100% */
-  width: ; /* Ensure the width adjusts based on the container size */
-  height: ; /* Ensure the height adjusts based on the container size */
-  border-radius: 2px;
+.slideimage{
+  display: none;
 }
 
-/* Adjusting margin between images */
-.image-container img + img {
-  margin-left: 2px;
-  margin-right: 2px;
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: 50%;
+  margin-top: -22px;
+  padding: 16px;
+  color: #f6f6ed;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
-/* Handling responsiveness for smaller screens */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
 @media screen and (max-width: 768px) {
+  .header-image{
+    height: 250px;
+  }
   .image-container {
-    flex-wrap: wrap;
+    max-width: fit-content;
+    margin: auto;
+    margin-left: 30%;
   }
 
-  .image-container img {
-    width: calc(100% - 10px);
-    margin-bottom: 10px;
+  .prev, .next {
+    width: 10%;
+    font-size: 14px;
+  }
+  
+  .next{
+    right: 38%;
   }
 
-  .image-container img + img {
-    margin-left: 0;
+  h1{
+    font-size: 21px;
+    margin-left: 120px;
+  }
+
+  h2{
+    font-size: 18px;
+    margin-top: 60px;
+    margin-left: 50px;
+  }
+
+  h3{
+    font-size: 18px;
+    text-align: left;
+  }
+
+  p{
+    font-size: 16px;
+    text-align: left;
+  }
+
+  .Pat-flags{
+    align-content: center;
+    width: 92%;
+    margin: 5%;
+  }
+
+  .lighthouses{
+    width: 42%;
+  }
+
+  .michelle{
+    align-content: center;
+    width: 92%;
+    margin: 5%;
+  }
+
+  .irelandpaintings{
+    width: 48%;
   }
 }
